--- a/options.html
+++ b/options.html
@@ -2,11 +2,27 @@
 <html>
 <head>
   <style>
-    button {
-      height: 30px;
-      width: 30px;
-      outline: none;
-      margin: 10px;
+    table#targetSetting {
+      width: 530px;
+      border: 1px #E3E3E3 solid;
+      border-collapse: collapse;
+      border-spacing: 0;
+    }
+
+    table#targetSetting th {
+      padding: 5px;
+      border: #E3E3E3 solid;
+      border-width: 0 0 1px 1px;
+      background: #F5F5F5;
+      font-weight: bold;
+      line-height: 120%;
+      text-align: center;
+    }
+    table#targetSetting td {
+      padding: 5px;
+      border: 1px #E3E3E3 solid;
+      border-width: 0 0 1px 1px;
+      text-align: center;
     }
   </style>
 </head>
@@ -14,8 +30,14 @@
 <div id="buttonDiv">
 </div>
 <div>
-  <p>Choose a different background color!</p>
+  <p>Edit Github label check target</p>
 </div>
+<table id="targetSetting">
+  <tr>
+    <th>host</th><th>user</th><th>repository</th><th>delete setting</th>
+  </tr>
+</table>
+<button>Save</button>
 </body>
 <script src="options.js"></script>
 </html>
