[add] saveボタンを押した際に入力されているsettingを出力できる

--- a/options.html
+++ b/options.html
@@ -37,7 +37,7 @@
     <th>host</th><th>user</th><th>repository</th><th>delete setting</th>
   </tr>
 </table>
-<button>Save</button>
+<button id="saveButton">Save</button>
 </body>
 <script src="options.js"></script>
 </html>
